Update media.html with new content structure

--- a/media.html
+++ b/media.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Fitness Tracker — Media</title>
+  <title>Fitness Tracker – Media</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -28,30 +28,43 @@
   </header>
 
   <main id="main" class="container stack-lg">
-    
-<h1>Media</h1>
-<section class="grid grid--2">
-  <article class="card">
-    <h2>Demo Videos</h2>
-    <ul><li>How to squat safely</li><li>Push-up progressions</li></ul>
-  </article>
-  <article class="card">
-    <h2>Exercise Images</h2>
-    <div class="grid" style="grid-template-columns: repeat(3, 1fr); gap:.5rem;">
-      <div class="card" aria-hidden="true" style="aspect-ratio:1/1;"></div>
-      <div class="card" aria-hidden="true" style="aspect-ratio:1/1;"></div>
-      <div class="card" aria-hidden="true" style="aspect-ratio:1/1;"></div>
-    </div>
-  </article>
-</section>
+    <h1>Media</h1>
 
+    <section class="grid grid--2">
+      <article class="card">
+        <h2>Demo Videos</h2>
+        <ul>
+          <li>How to squat safely</li>
+          <li>Push-up progressions</li>
+        </ul>
+      </article>
+
+      <article class="card">
+        <h2>Exercise Images</h2>
+        <div class="image-grid">
+          <figure>
+            <img src="images/pushup.jpg" alt="Person doing a push-up">
+            <figcaption>Push-up Form</figcaption>
+          </figure>
+          <figure>
+            <img src="images/squat.jpg" alt="Person doing a squat">
+            <figcaption>Perfect Squat</figcaption>
+          </figure>
+          <figure>
+            <img src="images/plank.jpg" alt="Person doing a plank">
+            <figcaption>Core Stability</figcaption>
+          </figure>
+        </div>
+      </article>
+    </section>
   </main>
 
   <footer class="site-footer">
-    <div class="container footer__content">
+    <div class="container footer_content">
       <small>© 2025 Mickel Murenzi</small>
-      <a href="mailto:mickel@murenzi.com">mickel@murenzi.com</a>
+      <a href="mailto:mmickel@murenzicom">mmickel@murenzicom</a>
     </div>
   </footer>
 </body>
 </html>
+
