Enhance tips.html with additional fitness insights

--- a/tips.html
+++ b/tips.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <a class="skip-link" href="#main">Skip to main content</a>
+
   <header class="site-header container">
     <div class="brand">
       <a href="index.html" class="logo" aria-label="Fitness Tracker Home">FT</a>
@@ -26,8 +27,9 @@
     </nav>
   </header>
 
-  <main id="main" class="container">
+  <main id="main" class="container stack-lg">
     <h1>Fitness Tips</h1>
+
     <section class="card">
       <h2>Beginner Tips</h2>
       <ul>
@@ -36,14 +38,38 @@
         <li>Combine strength training with cardio for balance.</li>
       </ul>
     </section>
+
     <section class="card">
       <h2>Motivational Insights</h2>
       <p>“Discipline is doing what needs to be done, even when you don’t feel like it.”</p>
     </section>
+
+    <section class="card">
+      <h2>More Fitness Insights</h2>
+
+      <details>
+        <summary>How often should I work out?</summary>
+        <p>For beginners, aim for 3–4 sessions a week focusing on full-body movements. Rest days are essential for recovery and preventing injuries.</p>
+      </details>
+
+      <details>
+        <summary>How can I stay motivated?</summary>
+        <p>Track small wins, celebrate progress, and find a workout buddy. Remember, motivation grows with action — not before it!</p>
+      </details>
+
+      <details>
+        <summary>What's a good pre-workout snack?</summary>
+        <p>Opt for something light with carbs and protein — like a banana with peanut butter or a smoothie with oats and milk.</p>
+      </details>
+    </section>
   </main>
 
   <footer class="site-footer">
-    <p>© 2025 Mickel Murenzi • <a href="mailto:mmickel@murenzicom">mmickel@murenzicom</a></p>
+    <div class="container footer_content">
+      <small>© 2025 Mickel Murenzi</small>
+      <a href="mailto:mmickel@murenzicom">mmickel@murenzicom</a>
+    </div>
   </footer>
 </body>
 </html>
+
