Refactor media.html for HTML5 compliance and structure

--- a/media.html
+++ b/media.html
@@ -1,10 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Fitness Tracker – Media</title>
-  <link rel="stylesheet" href="styles.css?v=2" />
+  <link rel="stylesheet" href="styles.css?v=3" />
 </head>
 <body>
   <a class="skip-link" href="#main">Skip to main content</a>
@@ -27,43 +27,45 @@
     </nav>
   </header>
 
-  <main id="main" class="container stack-lg">
-    <h1>Media</h1>
+  <main id="main">
+    <section>
+      <h1>Exercise Videos & Tutorials</h1>
+      <p>Learn correct form and technique with helpful visual guides and examples.</p>
 
-    <section class="grid grid--2">
-      <article class="card">
-        <h2>Demo Videos</h2>
-        <ul>
-          <li>How to squat safely</li>
-          <li>Push-up progressions</li>
-        </ul>
-      </article>
+      <ul>
+        <li>How to squat safely</li>
+        <li>Push-up progressions</li>
+      </ul>
+    </section>
 
-      <article class="card">
-        <h2>Exercise Images</h2>
-        <div class="image-grid">
-          <figure>
-            <img src="images/pushup.jpg" alt="Person doing a push-up">
-            <figcaption>Push-up Form</figcaption>
-          </figure>
-          <figure>
-            <img src="images/squat.jpg" alt="Person doing a squat">
-            <figcaption>Perfect Squat</figcaption>
-          </figure>
-          <figure>
-            <img src="images/plank.jpg" alt="Person doing a plank">
-            <figcaption>Core Stability</figcaption>
-          </figure>
-        </div>
-      </article>
+    <section>
+      <h2>Exercise Images</h2>
+      <div class="media-gallery">
+        <figure>
+          <img src="images/pushup.jpg" alt="Push-up Form">
+          <figcaption>Push-up Form</figcaption>
+        </figure>
+
+        <figure>
+          <img src="images/squat.jpg" alt="Perfect Squat">
+          <figcaption>Perfect Squat</figcaption>
+        </figure>
+
+        <figure>
+          <img src="images/plank.jpg" alt="Core Stability">
+          <figcaption>Core Stability</figcaption>
+        </figure>
+
+        <figure>
+          <img src="images/stretch.jpg" alt="Stretching Routine">
+          <figcaption>Stretching Routine</figcaption>
+        </figure>
+      </div>
     </section>
   </main>
 
-  <footer class="site-footer">
-    <div class="container footer_content">
-      <small>© 2025 Mickel Murenzi</small>
-      <a href="mailto:mmickel@murenzicom">mmickel@murenzicom</a>
-    </div>
+  <footer>
+    <p>© 2025 Mickel Murenzi • <a href="mailto:mmickel@murenzi.com">mmickel@murenzi.com</a></p>
   </footer>
 </body>
 </html>
