--- a/products.html
+++ b/products.html
@@ -29,7 +29,15 @@
         <img src="images/ebook.jpg" alt="Workout eBook">
         <h3>Workout eBook</h3>
         <p>Get a 4-week training plan to build strength and endurance.</p>
-        <!-- PayPal Button will go here -->
+        <form action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post" target="_top">
+  <input type="hidden" name="cmd" value="_xclick">
+  <input type="hidden" name="business" value="sb-demo@example.com">
+  <input type="hidden" name="item_name" value="Workout eBook">
+  <input type="hidden" name="amount" value="9.99">
+  <input type="hidden" name="currency_code" value="USD">
+  <input type="submit" value="Buy Now" class="button">
+</form>
+
       </div>
     </section>
   </main>
