--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <li><a href="tools.html">Tools</a></li>
         <li><a href="tips.html">Fitness Tips</a></li>
         <li><a href="media.html">Media</a></li>
+        <li><a href="products.html">Products</a></li>
         <li><a href="about.html">About/Contact</a></li>
       </ul>
     </nav>
