Fix image filename for workout eBook

--- a/products.html
+++ b/products.html
@@ -26,7 +26,7 @@
     <h1>Shop Fitness Resources</h1>
     <section class="products">
       <div class="product">
-        <img src="images/ebook.jpg" alt="Workout eBook">
+        <img src="images/eBook.jpg" alt="Workout eBook">
         <h3>Workout eBook</h3>
         <p>Get a 4-week training plan to build strength and endurance.</p>
         <form action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post" target="_top">
