Correct email address in footer of products.html

--- a/products.html
+++ b/products.html
@@ -43,7 +43,7 @@
   </main>
 
   <footer>
-    <p>© 2025 Mickel Murenzi • <a href="mailto:mmickel@murenzi.com">mmickel@murenzi.com</a></p>
+    <p>© 2025 Mickel Murenzi • <a href="mailto:mickel@murenzi.com">mickel@murenzi.com</a></p>
   </footer>
 </body>
 </html>
