Update email address in footer of tips.html

--- a/tips.html
+++ b/tips.html
@@ -67,7 +67,7 @@
   <footer class="site-footer">
     <div class="container footer_content">
       <small>© 2025 Mickel Murenzi</small>
-      <a href="mailto:mmickel@murenzicom">mmickel@murenzicom</a>
+      <a href="mailto:mickel@murenzi.com">mickel@murenzi.com</a>
     </div>
   </footer>
 </body>
