--- a/tools.html
+++ b/tools.html
@@ -39,7 +39,7 @@
   </main>
 
   <footer class="site-footer">
-    <p>© 2025 Mickel Murenzi • <a href="mailto:mmickel@murenzicom">mmickel@murenzicom</a></p>
+    <p>© 2025 Mickel Murenzi • <a href="mailto:mickel@murenzi.com">mickel@murenzi.com</a></p>
   </footer>
 </body>
 </html>
