--- a/index.html
+++ b/index.html
@@ -55,5 +55,6 @@
       <a href="mailto:mickel@murenzi.com">mickel@murenzi.com</a>
     </div>
   </footer>
+  <script src="script.js"></script>
 </body>
 </html>
