--- a/workouts.html
+++ b/workouts.html
@@ -10,5 +10,6 @@
   <h1>Workout Logs</h1>
   <p>This page will display logged workouts and sessions in future updates.</p>
   <a href="index.html">← Back to Home</a>
+  <script src="script.js"></script>
 </body>
 </html>
