--- a/tools.html
+++ b/tools.html
@@ -41,5 +41,6 @@
   <footer class="site-footer">
     <p>© 2025 Mickel Murenzi • <a href="mailto:mickel@murenzi.com">mickel@murenzi.com</a></p>
   </footer>
+  <script src="script.js"></script>
 </body>
 </html>
