--- a/tips.html
+++ b/tips.html
@@ -70,6 +70,7 @@
       <a href="mailto:mickel@murenzi.com">mickel@murenzi.com</a>
     </div>
   </footer>
+  <script src="script.js"></script>
 </body>
 </html>
 
