--- a/media.html
+++ b/media.html
@@ -67,6 +67,7 @@
   <footer>
     <p>© 2025 Mickel Murenzi • <a href="mailto:mickel@murenzi.com">mickel@murenzi.com</a></p>
   </footer>
+  <script src="script.js"></script>
 </body>
 </html>
 
