Add script tag for external JavaScript file

--- a/products.html
+++ b/products.html
@@ -45,5 +45,6 @@
   <footer>
     <p>© 2025 Mickel Murenzi • <a href="mailto:mickel@murenzi.com">mickel@murenzi.com</a></p>
   </footer>
+  <script src="script.js"></script>
 </body>
 </html>
