Add script tag to include script.js

--- a/about.html
+++ b/about.html
@@ -52,5 +52,6 @@
       <a href="mailto:mickel@murenzi.com">mickel@murenzi.com</a>
     </div>
   </footer>
+  <script src="script.js"></script>
 </body>
 </html>
