Convert exercise images to a slideshow format
Replaced media gallery with a slideshow for exercise images.

--- a/media.html
+++ b/media.html
@@ -39,29 +39,15 @@
     </section>
 
     <section>
-      <h2>Exercise Images</h2>
-      <div class="media-gallery">
-        <figure>
-          <img src="images/pushup.jpg" alt="Push-up Form">
-          <figcaption>Push-up Form</figcaption>
-        </figure>
+  <h2>Exercise Images</h2>
 
-        <figure>
-          <img src="images/squat.jpg" alt="Perfect Squat">
-          <figcaption>Perfect Squat</figcaption>
-        </figure>
-
-        <figure>
-          <img src="images/plank.jpg" alt="Core Stability">
-          <figcaption>Core Stability</figcaption>
-        </figure>
-
-        <figure>
-          <img src="images/stretch.jpg" alt="Stretching Routine">
-          <figcaption>Stretching Routine</figcaption>
-        </figure>
-      </div>
-    </section>
+  <div class="slideshow">
+    <img src="images/pushup.jpg" alt="Push-up Form">
+    <img src="images/squat.jpg" alt="Perfect Squat">
+    <img src="images/plank.jpg" alt="Core Stability">
+    <img src="images/stretch.jpg" alt="Stretching Routine">
+  </div>
+</section>
   </main>
 
   <footer>
