Add meta description to index.html
Added a meta description for SEO and user guidance.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="Track workouts, view summaries, explore fitness tips, and use tools to stay consistent and improve your fitness journey. Start logging and stay motivated.">
   <title>Fitness Tracker — Home</title>
   <link rel="stylesheet" href="styles.css?v=2" />
 </head>
