--- a/workouts.html
+++ b/workouts.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Log your daily workouts, review past sessions, and keep track of your fitness progress with an easy-to-use workout logging system.">
   <title>Workout Logs</title>
   <link rel="stylesheet" href="styles.css?v=2">
 </head>
