--- a/summaries.html
+++ b/summaries.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="View weekly and monthly workout summaries that help you understand your fitness progress, consistency, and overall training patterns.">
   <title>Fitness Tracker — Summaries</title>
   <link rel="stylesheet" href="styles.css?v=2" />
 </head>
