--- a/tools.html
+++ b/tools.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Use fitness tools including BMI and calories-burned calculators to better understand your body, track results, and support smart training goals.">
   <title>Fitness Tracker – Tools</title>
   <link rel="stylesheet" href="styles.css?v=2" />
 </head>
