--- a/tips.html
+++ b/tips.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Explore beginner-friendly fitness tips, motivation, and practical guidance to help you build healthy workout habits and stay consistent.">
   <title>Fitness Tracker – Fitness Tips</title>
   <link rel="stylesheet" href="styles.css?v=2" />
 </head>
