--- a/media.html
+++ b/media.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Watch exercise tutorials and browse fitness images to learn proper form, improve technique, and follow guided workout examples.">
   <title>Fitness Tracker – Media</title>
   <link rel="stylesheet" href="styles.css?v=3" />
 </head>
