--- a/products.html
+++ b/products.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Shop fitness resources including the Workout eBook designed to help you build strength, improve endurance, and stay focused on your goals.">
   <title>Products | Fitness Tracker</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
