--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="Learn about the purpose of the Fitness Tracker website and contact us through the feedback form for questions or comments.">
   <title>Fitness Tracker — About / Contact</title>
   <link rel="stylesheet" href="styles.css?v=2" />
 </head>
